--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   ],
   "version": "0.0.1",
   "dependencies": {
+    "foundation-sites": "6.1.2",
     "polymer": "Polymer/polymer#^1.2.0",
     "iron-ajax": "PolymerElements/iron-ajax#~1.1.1",
     "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
